init integration test
