# apps/db-adapter/internal/api/recipe_relationship.go
@@ -8,13 +8,13 @@ import (
 )
 
 func (srv *server) DeleteRecipeRelationship( //nolint:revive // not implemented
-	c *gin.Context, recipeId int, params api.DeleteRecipeRelationshipParams, //nolint:revive // not implemented
+	c *gin.Context, id int, params api.DeleteRecipeRelationshipParams, //nolint:revive // not implemented
 ) {
 	c.JSON(http.StatusServiceUnavailable, gin.H{"msg": "not implemented"})
 }
 
 func (srv *server) CreateRecipeRelationship( //nolint:revive // not implemented
-	c *gin.Context, recipeId int, params api.CreateRecipeRelationshipParams, //nolint:revive // not implemented
+	c *gin.Context, id int, params api.CreateRecipeRelationshipParams, //nolint:revive // not implemented
 ) {
 	c.JSON(http.StatusServiceUnavailable, gin.H{"msg": "not implemented"})
 }
